# motion-detect

./: .gitignore  Cargo.toml  README.md  example.sh
src/: main.rs
